Header With Logo In Middle Of Menu v2

--- a/index.html
+++ b/index.html
@@ -9,31 +9,63 @@
 </head>
 
 <body>
-    <header>
-        <div class="headerInner">
-            <div class="headerStart">
-                <a href="./">
-                    Headers
-                </a>
-            </div>
-            <div class="headerEnd">
-                <div class="menu">
-                    <a href="#">
-                        About
-                    </a>
-                    <a href="#">
-                        Profile
-                    </a>
-                    <a href="#">
-                        Contact
-                    </a>
-                    <a href="#">
-                        Sign Up
+    <div class="headersContainer">
+        <header>
+            <div class="headerInner">
+                <div class="headerStart">
+                    <a href="./">
+                        Headers
                     </a>
                 </div>
+                <div class="headerEnd">
+                    <div class="menu">
+                        <a href="#">
+                            About
+                        </a>
+                        <a href="#">
+                            Profile
+                        </a>
+                        <a href="#">
+                            Contact
+                        </a>
+                        <a href="#">
+                            Sign Up
+                        </a>
+                    </div>
+                </div>
             </div>
-        </div>
-    </header>
+        </header>
+        <!-- copy -->
+        <header class="logoMiddleHeader">
+            <div class="headerInner">
+                <div class="linksToTheSide headerEnd">
+                    <div class="menu">
+                        <a href="#">
+                            About
+                        </a>
+                        <a href="#">
+                            Profile
+                        </a>
+                    </div>
+                </div>
+                <div class="logo headerStart">
+                    <a href="./">
+                        Headers
+                    </a>
+                </div>
+                <div class="linksToTheSide headerEnd">
+                    <div class="menu">
+                        <a href="#">
+                            Contact
+                        </a>
+                        <a href="#">
+                            Sign Up
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </header>
+    </div>
 </body>
 
 </html>
