--- a/index.html
+++ b/index.html
@@ -65,7 +65,68 @@
                 </div>
             </div>
         </header>
+        <!-- copy2 -->
+        <header class="huggingLogoMiddle logoMiddleHeader">
+            <div class="headerInner">
+                <div class="linksToTheSide headerEnd">
+                    <div class="menu">
+                        <a href="#">
+                            About
+                        </a>
+                        <a href="#">
+                            Profile
+                        </a>
+                    </div>
+                </div>
+                <div class="logo headerStart">
+                    <a href="./">
+                        Headers
+                    </a>
+                </div>
+                <div class="linksToTheSide headerEnd">
+                    <div class="menu">
+                        <a href="#">
+                            Contact
+                        </a>
+                        <a href="#">
+                            Sign Up
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </header>
+        <!-- copy3 -->
+        <header class="newHeaderv1 huggingLogoMiddle logoMiddleHeader">
+            <div class="headerInner">
+                <div class="linksToTheSide headerEnd">
+                    <div class="menu">
+                        <a href="#">
+                            About
+                        </a>
+                        <a href="#">
+                            Profile
+                        </a>
+                    </div>
+                </div>
+                <div class="logo headerStart">
+                    <a href="./">
+                        Headers
+                    </a>
+                </div>
+                <div class="linksToTheSide headerEnd">
+                    <div class="menu">
+                        <a href="#">
+                            Contact
+                        </a>
+                        <a href="#">
+                            Sign Up
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </header>
     </div>
+
 </body>
 
 </html>
