League of Legends Header + New Pages

--- a/game.html
+++ b/game.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>League of Legends Homepage</title>
+    <title>Game</title>
     <link rel="stylesheet" href="./styles/style.css">
     <script src="./scripts/script.js" defer></script>
     <link rel="icon" href="https://cmsassets.rgpub.io/sanity/images/dsfx7636/content_organization_live/c0ff1c73fab6ddc82472ff5c79c9bd5a0032c616-110x70.svg" sizes="any" data-next-head="">
@@ -12,7 +12,7 @@
 
 <body>
     <div class="headersContainer">
-        <header class="leagueHeader">
+        <header>
             <div class="headerInner">
                 <div class="headerStart">
                     <a href="./" class="homeLinkLogo_riotGames">
